# ai-news-summary-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  lambda_handler.py  main.py  pyproject.toml
src/hn_agent/: __init__.py  __main__.py  config.py  hn_client.py  main.py  models.py  slack_client.py  summarizer.py
tests/: __init__.py  conftest.py  pytest.ini  test_hn_client.py  test_integration.py  test_slack_client.py  test_summarizer.py
